test/pending/pos/contrib_406.scala
package bug.contrib_406

object Test {
  val (a: List[_], b) = (List(1 ,2 ,3 ), 4)
}
